--- a/Editor/HTFramework.Editor.asmdef
+++ b/Editor/HTFramework.Editor.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "HTFramework.Editor",
     "references": [
-        "GUID:83f631a6180cc5a41982c9354b6cc704"
+        "GUID:83f631a6180cc5a41982c9354b6cc704",
+        "GUID:84651a3751eca9349aac36a66bba901b",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:69448af7b92c7f342b298e06a37122aa"
     ],
     "includePlatforms": [
         "Editor"
